crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-row-width.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
columns: [A, B, C, D]
rows:
  - [x, 1, 2]
  - [y, 1, 2, 3, 4]
```
