crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-shape.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
table: {long: sometimes}
columns: [A, B]
rows:
  - [1, {colour: red}]
```
