crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-unknown-key.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
table: {wdith: 100%}
columns: [A, B]
rows:
  - [1, 2]
colour: red
```
