crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-width-sum.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
columns:
  - {name: A, width: 60%}
  - {name: B, width: 50%}
rows:
  - [1, 2]
```
