crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-width.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
table:
  width: 150%
columns:
  - A
  - {name: B, width: 0%}
rows:
  - [1, 2]
```
