crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-yaml.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
- not
- a mapping
```
