crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__directive-foreign.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
[TOC]

::: texsmith.core.config
    options:
      members: true

Next paragraph.
