crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__divider.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
First page.

---

Second page.
