crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__fence-attributes.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```md {.snippet caption="A title" width="60%"}
# Hello
```

```mermaid image width="80%"
flowchart LR
  A --> B
```

```python {.wide title="hanoi.py"}
print(1)
```
