crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__fence-image.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```python image include="plot.py"
plt.plot([1, 2, 4, 8])
```

```mermaid image
flowchart LR
  A --> B
```

```mermaid code
flowchart LR
  A --> B
```
